Dummy but protected home page

--- a/libs/esports/auth/feature/src/lib/login/login.component.html
+++ b/libs/esports/auth/feature/src/lib/login/login.component.html
@@ -99,7 +99,7 @@
               />
               <label class="form-check-label inline-block text-gray-800" for="exampleCheck2">Remember me</label>
             </div>
-            <a [routerLink]="['/forgot-password']" routerLinkActive="router-link-active" class="text-gray-800"
+            <a [routerLink]="['/account/forgot-password']" routerLinkActive="router-link-active" class="text-gray-800"
               >Forgot password?</a
             >
           </div>
@@ -115,7 +115,7 @@
             <p class="text-sm font-semibold mt-2 pt-1 mb-0">
               Don't have an account?
               <a
-                [routerLink]="['/signup']"
+                [routerLink]="['/account/signup']"
                 routerLinkActive="router-link-active"
                 class="text-red-600 hover:text-red-700 focus:text-red-700 transition duration-200 ease-in-out"
                 >Register</a
