--- a/libs/esports/auth/feature/src/lib/signup/signup.component.html
+++ b/libs/esports/auth/feature/src/lib/signup/signup.component.html
@@ -53,7 +53,7 @@
             <p class="text-sm font-semibold mt-2 pt-1 mb-0">
               Already have an account?
               <a
-                [routerLink]="['/login']"
+                [routerLink]="['/account/login']"
                 routerLinkActive="router-link-active"
                 class="text-red-600 hover:text-red-700 focus:text-red-700 transition duration-200 ease-in-out"
                 >Login</a
